--- a/my-blog/public/index.html
+++ b/my-blog/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Skyler's Blog</title>
-        <link rel="icon" href="http://www.skyler.fun/skylerIcon.png" />
+        <link rel="icon" href="https://www.skyler.fun/skylerIcon.png" />
     </head>
     <body>
         <div id="root"></div>
